--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Portafolio | Ibero Puebla</title>
+        <title>Portafolio | IBERO PUEBLA</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -37,8 +37,8 @@
                     <div class="row gx-5 align-items-center justify-content-center">
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
                             <div class="my-5 text-center text-xl-start">
-                                <h1 class="display-6 fw-bolder text-white mb-2">Portafolio de Actividades</h1>
-                                <h1 class="display-8 fw-bolder text-white mb-2">Introduccion a Ing. Mecatrónica</h1>
+                                <h1 class="display-6 fw-bolder text-white mb-2">PORTAFOLIO DE ACTIVIDADES</h1>
+                                <h1 class="display-8 fw-bolder text-white mb-2">AUTOMATIZACIÓN INDUSTRIAL</h1>
                                 <p id="resumen" class="display-8 fw-normal text-white-50 mb-4">Departamento de Ciencias e Ingenierías | Universidad Iberoamericana Puebla, México.</p>
                             </div>
                         </div>
@@ -57,12 +57,12 @@
                                     <div class="card-body p-4">
                                         <div class="text-center">
                                             <img class="img-fluid rounded-circle mb-4 px-4" width="200px" src="assets/Huber.jpg" alt="..." />
-                                            <h5 class="fw-bolder">Huber Girón Nieto</h5>
-                                            <div class="fst-italic text-muted " style="color:#ef4044;">Ing. Mecatrónica</div>
+                                            <h5 class="fw-bolder">Eder e Ivan </h5>
+                                            <div class="fst-italic text-muted " style="color:#ef4044;">Ing. Automotriz y Mecatrónica</div>
                                         </div>
                                         <div class="mb-3 text-center" style="color:#ef4044;">
                                             <i class="bi bi-envelope text-primary"></i>
-                                                huber.giron2@iberopuebla.mx
+                                                195397@iberopuebla.mx y .....@iberopuebla.mx
                                         </div>
                                     </div>
                                 </div>
@@ -72,7 +72,7 @@
                             <!-- Post content-->
                             <div class="my-5">
                                 <h5 class="fw-bolder">Resumen:</h2>
-                                    <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita.</p>
+                                    <p class="lead fw-normal text-muted mb-0">Somos un equipo integrado por 2 jovenes muy motivados por la materia de automatización industrial grupo A, en primavera de 2024 y este es nuestro protafolio.</p>
                             </div>
                         </div>
                     </div>
@@ -93,8 +93,8 @@
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Práctica 1: Titulo</h5>
-                                    <p class="card-text mb-0">Breve resumen de la práctica 1. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita.</p>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 1: Ej de repaso</h5>
+                                    <p class="card-text mb-0">En esta practica basicamente hicimos 7 ej de repaso, donde ocupamos algunos botones, cables, focos, clavijas, etc. Nos volvimos a familiarizar un poco con los componentes.</p>
                                 </div>
                                 <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica1/">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -102,8 +102,8 @@
                                         <div class="d-flex align-items-center">
                                             <img class="rounded-circle me-3" src="assets/Huber.jpg" alt="..." width="40px">
                                             <div class="small">
-                                                <div class="fw-bold">Huber Giron Nieto</div>
-                                                <div class="text-muted">Enero 20, 2022</div>
+                                                <div class="fw-bold">EDER E IVAN </div>
+                                                <div class="text-muted">Enero 17, 2024</div>
                                             </div>
                                         </div>
                                     </div>
@@ -118,8 +118,8 @@
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Práctica 1: Titulo</h5>
-                                    <p class="card-text mb-0">Breve resumen de la práctica 1. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita.</p>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 2: Tablero y tres circuitos</h5>
+                                    <p class="card-text mb-0">En esta segunda practica realizamos nuestro tablero y ademas realizamos nuestros tres primeros circuitos dentro de el.</p>
                                 </div>
                                 <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica1/">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -127,8 +127,8 @@
                                         <div class="d-flex align-items-center">
                                             <img class="rounded-circle me-3" src="assets/Huber.jpg" alt="..." width="40px">
                                             <div class="small">
-                                                <div class="fw-bold">Huber Giron Nieto</div>
-                                                <div class="text-muted">Enero 20, 2022</div>
+                                                <div class="fw-bold">Eder e Ivan</div>
+                                                <div class="text-muted">Enero 29, 2024</div>
                                             </div>
                                         </div>
                                     </div>
