--- a/index.html
+++ b/index.html
@@ -56,13 +56,14 @@
                             <!-- Contact card free-->
                                     <div class="card-body p-4">
                                         <div class="text-center">
-                                            <img class="img-fluid rounded-circle mb-4 px-4" width="200px" src="assets/Huber.jpg" alt="..." />
+                                            <img class="img-fluid rounded-circle mb-4 px-4" width="200px" src="assets/EDERAUTOMA.png" alt="..." />
+                                            <img class="img-fluid rounded-circle mb-4 px-4" width="200px" src="assets/IVANAUTOMA.png" alt="..." />
                                             <h5 class="fw-bolder">Eder e Ivan </h5>
                                             <div class="fst-italic text-muted " style="color:#ef4044;">Ing. Automotriz y Mecatrónica</div>
                                         </div>
                                         <div class="mb-3 text-center" style="color:#ef4044;">
                                             <i class="bi bi-envelope text-primary"></i>
-                                                195397@iberopuebla.mx y .....@iberopuebla.mx
+                                                195397@iberopuebla.mx y 183024@iberopuebla.mx
                                         </div>
                                     </div>
                                 </div>
@@ -89,18 +90,18 @@
                         <!--Tarjeta Práctica 1 -->
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="img/portada_tarea1.png" alt="..." />
+                                <img class="card-img-top" src="img/IMAGENP1.png" alt="..." />
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
-                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Práctica 1: Ej de repaso</h5>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Electronica</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 1: Ejercicios de repaso</h5>
                                     <p class="card-text mb-0">En esta practica basicamente hicimos 7 ej de repaso, donde ocupamos algunos botones, cables, focos, clavijas, etc. Nos volvimos a familiarizar un poco con los componentes.</p>
                                 </div>
                                 <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica1/">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="assets/Huber.jpg" alt="..." width="40px">
+                                            <img class="rounded-circle me-3" src="assets/IMAGENP1.png" alt="..." width="40px">
                                             <div class="small">
                                                 <div class="fw-bold">EDER E IVAN </div>
                                                 <div class="text-muted">Enero 17, 2024</div>
@@ -114,7 +115,7 @@
                         <!--Tarjeta Práctica 1 -->
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="img/portada_tarea1.png" alt="..." />
+                                <img class="card-img-top" src="img/IMAGENP2.png" alt="..." />
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
@@ -125,9 +126,9 @@
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="assets/Huber.jpg" alt="..." width="40px">
+                                            <img class="rounded-circle me-3" src="assets/IMAGENP2.png" alt="..." width="40px">
                                             <div class="small">
-                                                <div class="fw-bold">Eder e Ivan</div>
+                                                <div class="fw-bold">EDER E IVAN</div>
                                                 <div class="text-muted">Enero 29, 2024</div>
                                             </div>
                                         </div>
@@ -143,17 +144,17 @@
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Práctica 1: Titulo</h5>
-                                    <p class="card-text mb-0">Breve resumen de la práctica 1. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita.</p>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 3: Electrotecnia Presencial y Virtual</h5>
+                                    <p class="card-text mb-0">Basicamente en esta practica realizamos varios circuitos, tanto en virtual tanto en lo fisico.</p>
                                 </div>
                                 <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica1/">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="assets/Huber.jpg" alt="..." width="40px">
+                                            <img class="rounded-circle me-3" src="assets/logo_ibero.jpg" alt="..." width="40px">
                                             <div class="small">
-                                                <div class="fw-bold">Huber Giron Nieto</div>
-                                                <div class="text-muted">Enero 20, 2022</div>
+                                                <div class="fw-bold">EDER E IVAN</div>
+                                                <div class="text-muted">Febrero 12, 2024</div>
                                             </div>
                                         </div>
                                     </div>
