--- a/practica1/index.html
+++ b/practica1/index.html
@@ -37,7 +37,7 @@
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
                             <div class="my-5 text-center text-xl-start">
                                 <h1 class="display-6 fw-bolder text-white mb-2">Portafolio de Actividades</h1>
-                                <h1 class="display-8 fw-bolder text-white mb-2">Introduccion a Ing. Mecatrónica</h1>
+                                <h1 class="display-8 fw-bolder text-white mb-2">Introduccion a Ing. Automotriz y Mecatrónica</h1>
                                 <p id="resumen" class="display-8 fw-normal text-white-50 mb-4">Departamento de Ciencias e Ingenierías | Universidad Iberoamericana Puebla, México.</p>
                             </div>
                         </div>
@@ -54,12 +54,20 @@
                         <h1 class="fw-bolder mb-1">Practica 1 Ejercicios de Repaso</h1>
 
                         <!-- ETIQUETA DE ALUMNO (Hacer una por cada alumno)-->
-                            <img class="img-fluid rounded-circle" width="50px" src="assets/Huber.jpg" alt="..." />
+                            <img class="img-fluid rounded-circle" width="50px" src="assets/EDERAUTOMA.png" alt="..." />
                             <div class="ms-2">
-                                <div class="fw-bold">Eder e Ivan</div>
-                                <div class="text-muted">ING. Automotriz y Mecatronica</div>
+                                <div class="fw-bold">Eder</div>
+                                <div class="text-muted">Ing. Automotriz</div>
                             </div>
                         <!--Aqui termina etiqueta de alumno-->
+                        <!-- ETIQUETA DE ALUMNO (Hacer una por cada alumno)-->
+                            <img class="img-fluid rounded-circle" width="50px" src="assets/IVANAUTOMA.png" alt="..." />
+                            <div class="ms-2">
+                                <div class="fw-bold">Ivan</div>
+                                <div class="text-muted">Ing. Mecatrónica</div>
+                            </div>
+                        <!--Aqui termina etiqueta de alumno-->
+
 
                         <div class="text-muted fst-italic mt-2 mb-2">Fecha: Enero 17, 2024</div>
                         <!-- ETIQUETAS O TOPICOS IMPORTANTES DE LA PRACTICA-->
@@ -93,9 +101,11 @@
                         <p class="fs-6 mb-4">Leds</p>
                         <p class="fs-6 mb-4">Cables</p>
                         <p id="desarrollo">
+                            
                         <h2 class="fw-bolder mb-4 mt-5 fs-5">- Desarrollo -</h2>
                         <p class="fs-6 mb-4">Basandonos en los circuitos presentados en las imagenes siguientes, se procedio a realizar el armado fisico de los circuitos con material antes mencionados.</p>
-                            <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="600px" src="img/ne555.png" alt="..." /></figure>
+                            <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="600px" src="img/DESAPR1.png" alt="..." /></figure>
+                             <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="600px" src="img/DESAPR1.1.png" alt="..." /></figure>
                     
                             <p id="diseño">
                             <h1 class="fw-bolder2 mb-4 mt-5 fs-5">Diseño</h1>
@@ -106,8 +116,30 @@
                         <h2 class="fw-bolder mb-4 mt-5 fs-5">- Resultados -</h2>
                         <p class="fs-6 mb-4">A continuacion se muestran los videos de los circuitos fisicos.</p>
                         <figure class="mb-4" align="center"><video width="80%"  controls>
-                            <source src="video/Robot.mp4" type="video/mp4">
+                            <source src="video/P1-EJ1.mp4" type="video/mp4">
                         </video></p></figure>
+                      <figure class="mb-4" align="center"><video width="80%"  controls>
+                            <source src="video/P1-EJ2.mp4" type="video/mp4">
+                        </video></p></figure>
+                    <figure class="mb-4" align="center"><video width="80%"  controls>
+                            <source src="video/P1-EJ3.mp4" type="video/mp4">
+                        </video></p></figure>
+                      <figure class="mb-4" align="center"><video width="80%"  controls>
+                            <source src="video/P1-EJ4.mp4" type="video/mp4">
+                        </video></p></figure>
+                      <figure class="mb-4" align="center"><video width="80%"  controls>
+                            <source src="video/P1-EJ5.mp4" type="video/mp4">
+                        </video></p></figure>
+                      <figure class="mb-4" align="center"><video width="80%"  controls>
+                            <source src="video/P1-EJ6.mp4" type="video/mp4">
+                        </video></p></figure>
+                      <figure class="mb-4" align="center"><video width="80%"  controls>
+                            <source src="video/P1-EJ7.mp4" type="video/mp4">
+                        </video></p></figure>
+
+
+
+
 
                         <p id="conclusiones">
                         <h2 class="fw-bolder mb-4 mt-5 fs-5">- Conclusiones -</h2>
